[tool.poetry]
name = "agentpi-transactions"
version = "0.1.0"
description = ""
authors = ["san0kq <sanromanov94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.18.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
httpx = "^0.28.1"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
